# School-Management-Software

./: main.py  pyproject.toml  readme.md
apps/academics/: enum.py  models.py  serializers.py  urls.py  views.py
apps/academics/migrations/: 0001_initial.py  0002_initial.py
apps/accounts/: admin.py  enum.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_parent_student_teacher_studentparent.py
apps/attendance/: enum.py  models.py  serializers.py  urls.py  views.py
apps/attendance/migrations/: 0001_initial.py
apps/exams/: enum.py  models.py  serializers.py  urls.py  views.py
apps/exams/migrations/: 0001_initial.py
apps/fees/: enum.py  models.py  serializers.py  urls.py  views.py
apps/fees/migrations/: 0001_initial.py
apps/notices/: apps.py  enum.py  models.py  serializers.py  urls.py  views.py
apps/notices/migrations/: 0001_initial.py
config/: settings.py  urls.py
